{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "384a8ec7-de5b-481c-b419-1661fa11692a",
            "actions": [
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "716c7785-b915-434b-a4ec-0fd02c10ad56",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "571d7216-d56c-4172-870f-0a225d5e80fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "aea38b98-911e-4470-a894-c99a59fba8e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "62bbb2c3-756e-41ba-91b9-c60d9896f10c",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0749b29-c910-4fac-bc62-e31f2608b0fe",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4eca2b0-b0d2-4472-be91-811289fa55aa",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}